🔧fix overlap of privacy-dropdown at v1.4.1

--- a/mustardon.css
+++ b/mustardon.css
@@ -21,8 +21,7 @@
     z-index : 1000 !important  ;
     position : fixed !important ;
     left : 0% !important ;
-    top :  430px !important;
-    padding-left : 10px !important ;
+    top :  280px !important;
 }
 
 .column:nth-child(3) {
